(X) button fix
On IOS the (X) button is no longer hidden behind the timestamp at the top left of the screen.

--- a/src/app/collections/minis/mini-form/mini-form.component.scss
+++ b/src/app/collections/minis/mini-form/mini-form.component.scss
@@ -19,3 +19,8 @@ ion-label {
     outline: 1px solid black;
     outline-offset: -1px;
 }
+
+body{
+    padding-top: constant(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
+}
